ctrl+mouse wheel scale canvas

--- a/mapEditor/MainWindow.xaml
+++ b/mapEditor/MainWindow.xaml
@@ -11,6 +11,7 @@
         MouseLeftButtonUp="Window_MouseLeftButtonUp"
         MouseMove="Window_MouseMove"
         MouseLeave="Window_MouseLeave"
+        MouseWheel="Window_MouseWheel"
         AllowDrop="True"
         DragEnter="Window_DragEnter"
         Drop="Window_Drop">
